# navigation-bees

./: .env.example  .gitignore  README.txt  bee_tracking.settings  circle_config.json  circle_config_cache.json  pyproject.toml  requirements.txt  working.settings
Data/: first.settings
Output/Results/: tracking_quality_summary.csv
Scripts/: MasterScript.py  arena_config.py  bee_analysis.ipynb  check_tracking_quality.py  generate_tracked_video.py  new_batch.sh  post_process_tracking.py  run_trex_batch.sh  trim_input_videos.py
analysis/: results_analysis.ipynb  wiki.md
analysis/results/: summary_all_experiments.csv  summary_per_condition.csv
analysis/scripts/: analyse_bees.py  generate_plots.py  paper2_analysis.py  plot_dop_analysis.py  plot_heatmaps.py
nots/: ARCHITECTURE.md  DELIVERY_SUMMARY.md  INTEGRATION.md  QUICKSTART.md  README.md  TRex_Handover.pages  docs.md  my_nots.md  paper1_figures_text.txt  paper2_figures_text.txt  plan_text.txt
