[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bumblebee-navigation-analysis"
version = "0.1.0"
description = "Data analysis and visualization of bumblebee walking paths and navigation"
readme = "README.txt"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "ipykernel>=6.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis*"]
